<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_border"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/list_item_horizontal_padding"
    android:paddingVertical="@dimen/list_item_vertical_padding">

    <TextView
        android:id="@+id/id_text"
        style="@style/label_list_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_item_bottom_margin"
        android:text="@string/id" />

    <TextView
        android:id="@+id/user_id_text"
        style="@style/label_list_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_item_bottom_margin"
        android:text="@string/user_id" />

    <TextView
        android:id="@+id/title_text"
        style="@style/label_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_item_bottom_margin"
        android:text="@string/title" />

    <TextView
        android:id="@+id/body_text"
        style="@style/label_list_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body" />
</LinearLayout>